--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				<li><a data-toggle="scrollTo" href="#nav-home">首页</a></li>
 				<li><a data-toggle="scrollTo" href="#nav-product">产品</a></li>
 				<li><a data-toggle="scrollTo" href="#nav-service">服务</a></li>
+				<li><a data-toggle="scrollTo" href="#nav-content">内容</a></li>
 				<li><a data-toggle="scrollTo" href="#nav-about">关于我们</a></li>
 				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
 			</ul>
@@ -61,8 +62,9 @@
 	</div><!-- /.container-fluid -->
 </nav>
 
-
+<!--wrapper start-->
 <div class="wrapper"  id="nav-home">
+	<!--header start-->
 	<div class="header header-filter" style="background-image: url('img/bg.jpg');">
 		<div class="container">
 			<div class="row">
@@ -75,12 +77,14 @@
 			</div>
 		</div>
 	</div>
-
+	<!--header end-->
+	<!--main start-->
 	<div class="main main-raised">
+		<!--产品 start-->
 		<div class="section section-basic">
 			<div class="container">
 					<div id="nav-product" class="title">
-							<h2>产品</h2>
+							<h3>产品</h3>
 					</div>
 				<!-- START PIC TEXT LEFT-->
 				<section class="pic-text pic-text-left">
@@ -95,9 +99,9 @@
 							<!-- RIGHT TEXT-->
 							<div class="col-md-6">
 								<!-- SECTION TITLE-->
-								<h3>雪花电池
-									<button class="btn btn-boder btn-simple btn-sm btn-info float-r">更多</button>
-								</h3>
+								<h4>雪花电池
+									<button class="btn btn-boder btn-simple btn-xs btn-info float-r">更多</button>
+								</h4>
 								<p>
 									雪花电池雪花电池雪花电池雪花电池雪花电池
 									雪花电池雪花电池雪花电池雪花电池雪花电池
@@ -150,11 +154,12 @@
 				<!-- END PIC TEXT LEFT-->
 			</div>
 		</div>
-
+		<!--产品 start-->
+		<!--服务 start-->
 		<div class="section section-basic">
 			<div class="container">
 				<div id="nav-service" class="title">
-						<h2>服务</h2>
+						<h3>服务</h3>
 				</div>
 				<!-- START APP SHOTS-->
 				<section class="versions">
@@ -220,11 +225,108 @@
 				<!-- END APP SHOTS-->
 			</div>
 		</div>
+		<!--服务 start-->
+		<!--资讯动态 start-->
+		<div class="section section-basic bgl-grey-100">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div id="nav-content" class="title">
+							<h3>内容</h3>
+						</div>
+						<div class="card card-nav-tabs">
+							<div class="header header-info">
+								<div class="nav-tabs-navigation">
+									<div class="nav-tabs-wrapper">
+										<ul class="nav nav-tabs" data-tabs="tabs">
+											<li class="active">
+												<a href="#information" data-toggle="tab">
+													资讯动态
+												</a>
+											</li>
+											<li>
+												<a href="#introduction" data-toggle="tab">
+													公司简介
+												</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="content">
+								<div class="tab-content">
+									<div class="tab-pane active" id="information">
+										<ul class="featured-list">
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+												<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+												<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762705&idx=1&sn=b0d3e0dfeae5e5ec7ec5d11c0acf2dd3&scene=0#wechat_redirect">小小指令集，小有大作用</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+												<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762704&idx=1&sn=e03ab978e5e6f221f70e7ad62f806294&scene=0#wechat_redirect">别问我！什么是CPU的性能参数</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+												<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=503278511&idx=1&sn=06cbec30a638a15ebfc60c33f42d9e6b&scene=18#wechat_redirect">电脑周边</a>
+											</li>
+											<!--更多-->
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+												<a class="word overflow" target="_blank" href="#">&gt;&gt;查看更多</a>
+											</li>
+										</ul>
+									</div>
+									<div class="tab-pane" id="introduction">
+										<div class="col-lg-4 col-sm-6 col-xs-12">
+											<p>
+												武汉雪景科技有限公司是一家由武汉东湖学院学生创立的初创型科技公司。注册于2016年。公司拥有自主知识产权的项目在全国“互联网+”省赛中夺得铜奖，并正在冲刺金奖和国家级比赛。
+											</p>
+											<p>
+												公司旨在打造“依托专业优势，围绕市场创业”的创新型公司。
+											</p>
+											<p>
+												公司创始人李志鹏是2012级电信学院电子科学与技术专业的优秀毕业生，他联合电信学院和各社团并达成了良好、持续共赢的稳定合作，为公司未来发展创造了无限可能。
+											</p>
+										</div>
 
+										<div class="col-lg-4 col-sm-6 col-xs-12">
+											<h4>公司主要业务</h4>
+											<ul class="featured-list">
+												<li><p>线上线下电子产品及配件销售</p></li>
+												<li><p>线上线下电子产品及配件销售</p></li>
+												<li><p>线上线下电子产品及配件销售</p></li>
+											</ul>
+										</div>
+
+										<div class="col-lg-4 col-sm-6 col-xs-12">
+											<p>
+												我们秉承“专业、诚信、用心”的经营理念致力于电子产品设备的研发销售。我们不断创新，不断积累，期待在最关键的时刻为您提供最优质完善的产品和服务，做到产品满意，售后放心。
+
+											</p>
+											<p>
+												我们的企业目标：
+												做专业、诚信、优秀的产品供应商
+												我们的服务宗旨：
+												以最合理的价格，最完善的服务，提供最优质的产品
+											</p>
+											<p>
+												公司目前合作的业务有：华硕、联想、戴尔、苹果、索尼等电脑品牌和华为、vivo、OPPO、小米、魅族、苹果、三星、诺基亚、乐视、美图等手机品牌。
+
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--资讯动态 start-->
+		<!--关于我们 start-->
 		<div class="section section-basic">
 			<div class="container">
 				<div id="nav-about" class="title">
-						<h2>关于我们</h2>
+						<h3>关于我们</h3>
 				</div>
 				<!-- START APP SHOTS-->
 				<section class="versions">
@@ -255,11 +357,11 @@
 								<!-- FEATURE LIST-->
 								<ul class="featured-list">
 									<li>
-											<p>微博：<a target="_blank" href="http://weibo.com/p/1006065838375310/home" >雪景科技</a></p>
+											<p>微博：<a target="_blank" href="http://weibo.com/p/1006065838375310/home" >雪景科技</a>(新浪)</p>
 									</li>
 									<li>
 											<p>微信：雪景科技(公众号)
-												<br/><img style="height: 180px;width: 180px;margin-left: 2em;" src="img/qr_code-300x300.jpg">
+												<br/><img style="height: 180px;width: 180px;margin-left: 2.4em;" src="img/qr_code-300x300.jpg">
 										</p>
 									</li>
 								</ul>
@@ -270,110 +372,15 @@
 				<!-- END APP SHOTS-->
 			</div>
 		</div>
-
-		<div class="section section-basic bgl-grey-100">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="title">
-							<h3>Tabs with Icons on Card</h3>
-						</div>
-
-						<!-- Tabs with icons on Card -->
-						<div class="card card-nav-tabs">
-							<div class="header header-info">
-								<!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
-								<div class="nav-tabs-navigation">
-									<div class="nav-tabs-wrapper">
-										<ul class="nav nav-tabs" data-tabs="tabs">
-											<li class="active">
-												<a href="#information" data-toggle="tab">
-													资讯动态
-												</a>
-											</li>
-											<li>
-												<a href="#introduction" data-toggle="tab">
-													公司简介
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="content">
-								<div class="tab-content">
-									<div class="tab-pane active" id="information">
-										<ul class="featured-list">
-											<li class="col-lg-4 col-sm-6 col-xs-12">
-													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
-											</li>
-											<li class="col-lg-4 col-sm-6 col-xs-12">
-													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762705&idx=1&sn=b0d3e0dfeae5e5ec7ec5d11c0acf2dd3&scene=0#wechat_redirect">小小指令集，小有大作用</a>
-											</li>
-											<li class="col-lg-4 col-sm-6 col-xs-12">
-													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762704&idx=1&sn=e03ab978e5e6f221f70e7ad62f806294&scene=0#wechat_redirect">别问我！什么是CPU的性能参数</a>
-											</li>
-											<li class="col-lg-4 col-sm-6 col-xs-12">
-													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=503278511&idx=1&sn=06cbec30a638a15ebfc60c33f42d9e6b&scene=18#wechat_redirect">电脑周边</a>
-											</li>
-										</ul>
-									</div>
-									<div class="tab-pane" id="introduction">
-												<div class="col-lg-4 col-sm-6 col-xs-12">
-													<p>
-														武汉雪景科技有限公司是一家由武汉东湖学院学生创立的初创型科技公司。注册于2016年。公司拥有自主知识产权的项目在全国“互联网+”省赛中夺得铜奖，并正在冲刺金奖和国家级比赛。
-													</p>
-													<p>
-														公司旨在打造“依托专业优势，围绕市场创业”的创新型公司。
-													</p>
-													<p>
-														公司创始人李志鹏是2012级电信学院电子科学与技术专业的优秀毕业生，他联合电信学院和各社团并达成了良好、持续共赢的稳定合作，为公司未来发展创造了无限可能。
-													</p>
-												</div>
-
-												<div class="col-lg-4 col-sm-6 col-xs-12">
-													<h4>公司主要业务</h4>
-													<ul class="featured-list">
-														<li class="word">线上线下电子产品及配件销售</li>
-														<li class="word">线上线下电子产品及配件销售</li>
-														<li class="word">线上线下电子产品及配件销售</li>
-													</ul>
-												</div>
-
-												<div class="col-lg-4 col-sm-6 col-xs-12">
-													<p>
-		我们秉承“专业、诚信、用心”的经营理念致力于电子产品设备的研发销售。我们不断创新，不断积累，期待在最关键的时刻为您提供最优质完善的产品和服务，做到产品满意，售后放心。
-
-													</p>
-													<p>
-		我们的企业目标：
-		做专业、诚信、优秀的产品供应商
-		我们的服务宗旨：
-		以最合理的价格，最完善的服务，提供最优质的产品
-													</p>
-													<p>
-														公司目前合作的业务有：华硕、联想、戴尔、苹果、索尼等电脑品牌和华为、vivo、OPPO、小米、魅族、苹果、三星、诺基亚、乐视、美图等手机品牌。
-
-													</p>
-												</div>
-									</div>
-							</div>
-						</div>
-						<!-- End Tabs with icons on Card -->
-					</div>
-
-
-				</div>
-			</div>
-		</div>
-
+		<!--关于我们 start-->
 	</div>
-
+	<!--main end-->
+	<!--footer start-->
 	<footer class="footer">
 		<div class="container">
 			<nav class="pull-left">
 				<ul>
-					<li><a href="#">公司简介</a></li>
+					<li><a href="#">加入雪景</a></li>
 					<li><a href="#">资讯</a></li>
 					<li><a href="#">联系我们</a></li>
 				</ul>
@@ -383,10 +390,9 @@
 			</div>
 		</div>
 	</footer>
-
+	<!--footer end-->
 </div>
-
-
+<!--wrapper end-->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="libs/js/jquery-2.2.4.min.js"></script>
 <script src="libs/js/bootstrap.min.js"></script>
