--- a/plugins/map/map.html
+++ b/plugins/map/map.html
@@ -38,19 +38,19 @@
   // 百度地图API功能
   var map = new BMap.Map('allmap');
   var poi = new BMap.Point(114.325605,30.430141);
-  map.centerAndZoom(poi, 16);
+  map.centerAndZoom(poi, 14);
   map.enableScrollWheelZoom();
 
   var content = '<div style="margin:0;line-height:20px;padding:2px;">' +
-      '<img src="logo-80x80.png" alt="" style="float:right;zoom:1;overflow:hidden;width:80px;height:80px;margin-left:3px;"/>' +
-      '地址：武汉东湖学院科技大楼B602<br/>电话：110<br/>简介：武汉雪景科技有限公司' +
+      '<img src="logo-80x80.png" alt="" style="float:right;zoom:1;overflow:hidden;width:50px;height:50px;margin-left:3px;"/>' +
+      '地址：武汉东湖学院科技大楼B602<br/>简介：武汉雪景科技有限公司' +
       '</div>';
   //创建检索信息窗口对象
   var searchInfoWindow = null;
   searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
     title  : "雪景科技",      //标题
-    width  : 290,             //宽度
-    height : 95,              //高度
+    width  : 280,             //宽度
+    height: 58,              //高度
     panel  : "panel",         //检索结果面板
     enableAutoPan : true,     //自动平移
     searchTypes   :[
